PLC/TP's/TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BEGIN
    END
    INTEGER
    NUMBER_REAL
    THEN

Grammar

Rule 0     S' -> programa
Rule 1     programa -> plc
Rule 2     plc -> PLC ID VAR declaracoes comandos
Rule 3     declaracoes -> declaracao
Rule 4     declaracoes -> declaracoes declaracao
Rule 5     declaracao -> ID SEMICOLON
Rule 6     declaracao -> ID ASSIGN NUMBER SEMICOLON
Rule 7     declaracao -> ID ASSIGN leitura
Rule 8     declaracao -> funcao
Rule 9     comandos -> comando
Rule 10    comandos -> comandos comando
Rule 11    comando -> atribuicao
Rule 12    comando -> escrita
Rule 13    comando -> selecao
Rule 14    comando -> repeticao
Rule 15    comando -> call
Rule 16    comando -> incrementacao SEMICOLON
Rule 17    leitura -> READ LBRACKET texto RBRACKET SEMICOLON
Rule 18    atribuicao -> ID ASSIGN expressao SEMICOLON
Rule 19    atribuicao -> ID ASSIGN leitura
Rule 20    escrita -> WRITE LBRACKET argumento RBRACKET SEMICOLON
Rule 21    argumento -> texto
Rule 22    argumento -> expressao
Rule 23    texto -> QUOTE STRING QUOTE
Rule 24    expressao -> fator
Rule 25    expressao -> expressao PLUS expressao
Rule 26    expressao -> expressao MINUS expressao
Rule 27    expressao -> expressao TIMES expressao
Rule 28    expressao -> expressao DIVIDE expressao
Rule 29    fator -> ID
Rule 30    fator -> NUMBER
Rule 31    fator -> LBRACKET expressao RBRACKET
Rule 32    selecao -> IF LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET
Rule 33    selecao -> IF LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET ELSE LCBRACKET comandos RCBRACKET
Rule 34    repeticao -> FOR LBRACKET declaracao condicao SEMICOLON incrementacao RBRACKET LCBRACKET comandos RCBRACKET
Rule 35    repeticao -> WHILE LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET
Rule 36    incrementacao -> ID INCREMENT
Rule 37    incrementacao -> ID DECREMENT
Rule 38    condicao -> condicao operador condicao
Rule 39    condicao -> expressao
Rule 40    operador -> GT
Rule 41    operador -> LT
Rule 42    operador -> GE
Rule 43    operador -> LE
Rule 44    operador -> EQ
Rule 45    operador -> JUNGLE_DIFF
Rule 46    operador -> OR
Rule 47    operador -> AND
Rule 48    funcao -> FUNCTION ID LCBRACKET comandos RETURN expressao RCBRACKET SEMICOLON
Rule 49    call -> ID LBRACKET RBRACKET SEMICOLON

Terminals, with rules where they appear

AND                  : 47
ASSIGN               : 6 7 18 19
BEGIN                : 
DECREMENT            : 37
DIVIDE               : 28
ELSE                 : 33
END                  : 
EQ                   : 44
FOR                  : 34
FUNCTION             : 48
GE                   : 42
GT                   : 40
ID                   : 2 5 6 7 18 19 29 36 37 48 49
IF                   : 32 33
INCREMENT            : 36
INTEGER              : 
JUNGLE_DIFF          : 45
LBRACKET             : 17 20 31 32 33 34 35 49
LCBRACKET            : 32 33 33 34 35 48
LE                   : 43
LT                   : 41
MINUS                : 26
NUMBER               : 6 30
NUMBER_REAL          : 
OR                   : 46
PLC                  : 2
PLUS                 : 25
QUOTE                : 23 23
RBRACKET             : 17 20 31 32 33 34 35 49
RCBRACKET            : 32 33 33 34 35 48
READ                 : 17
RETURN               : 48
SEMICOLON            : 5 6 16 17 18 20 34 48 49
STRING               : 23
THEN                 : 
TIMES                : 27
VAR                  : 2
WHILE                : 35
WRITE                : 20
error                : 

Nonterminals, with rules where they appear

argumento            : 20
atribuicao           : 11
call                 : 15
comando              : 9 10
comandos             : 2 10 32 33 33 34 35 48
condicao             : 32 33 34 35 38 38
declaracao           : 3 4 34
declaracoes          : 2 4
escrita              : 12
expressao            : 18 22 25 25 26 26 27 27 28 28 31 39 48
fator                : 24
funcao               : 8
incrementacao        : 16 34
leitura              : 7 19
operador             : 38
plc                  : 1
programa             : 0
repeticao            : 14
selecao              : 13
texto                : 17 21

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . plc
    (2) plc -> . PLC ID VAR declaracoes comandos

    PLC             shift and go to state 3

    programa                       shift and go to state 1
    plc                            shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> plc .

    $end            reduce using rule 1 (programa -> plc .)


state 3

    (2) plc -> PLC . ID VAR declaracoes comandos

    ID              shift and go to state 4


state 4

    (2) plc -> PLC ID . VAR declaracoes comandos

    VAR             shift and go to state 5


state 5

    (2) plc -> PLC ID VAR . declaracoes comandos
    (3) declaracoes -> . declaracao
    (4) declaracoes -> . declaracoes declaracao
    (5) declaracao -> . ID SEMICOLON
    (6) declaracao -> . ID ASSIGN NUMBER SEMICOLON
    (7) declaracao -> . ID ASSIGN leitura
    (8) declaracao -> . funcao
    (48) funcao -> . FUNCTION ID LCBRACKET comandos RETURN expressao RCBRACKET SEMICOLON

    ID              shift and go to state 6
    FUNCTION        shift and go to state 10

    declaracoes                    shift and go to state 7
    declaracao                     shift and go to state 8
    funcao                         shift and go to state 9

state 6

    (5) declaracao -> ID . SEMICOLON
    (6) declaracao -> ID . ASSIGN NUMBER SEMICOLON
    (7) declaracao -> ID . ASSIGN leitura

    SEMICOLON       shift and go to state 11
    ASSIGN          shift and go to state 12


state 7

    (2) plc -> PLC ID VAR declaracoes . comandos
    (4) declaracoes -> declaracoes . declaracao
    (9) comandos -> . comando
    (10) comandos -> . comandos comando
    (5) declaracao -> . ID SEMICOLON
    (6) declaracao -> . ID ASSIGN NUMBER SEMICOLON
    (7) declaracao -> . ID ASSIGN leitura
    (8) declaracao -> . funcao
    (11) comando -> . atribuicao
    (12) comando -> . escrita
    (13) comando -> . selecao
    (14) comando -> . repeticao
    (15) comando -> . call
    (16) comando -> . incrementacao SEMICOLON
    (48) funcao -> . FUNCTION ID LCBRACKET comandos RETURN expressao RCBRACKET SEMICOLON
    (18) atribuicao -> . ID ASSIGN expressao SEMICOLON
    (19) atribuicao -> . ID ASSIGN leitura
    (20) escrita -> . WRITE LBRACKET argumento RBRACKET SEMICOLON
    (32) selecao -> . IF LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET
    (33) selecao -> . IF LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET ELSE LCBRACKET comandos RCBRACKET
    (34) repeticao -> . FOR LBRACKET declaracao condicao SEMICOLON incrementacao RBRACKET LCBRACKET comandos RCBRACKET
    (35) repeticao -> . WHILE LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET
    (49) call -> . ID LBRACKET RBRACKET SEMICOLON
    (36) incrementacao -> . ID INCREMENT
    (37) incrementacao -> . ID DECREMENT

    ID              shift and go to state 13
    FUNCTION        shift and go to state 10
    WRITE           shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 26

    comandos                       shift and go to state 14
    declaracao                     shift and go to state 15
    comando                        shift and go to state 16
    funcao                         shift and go to state 9
    atribuicao                     shift and go to state 17
    escrita                        shift and go to state 18
    selecao                        shift and go to state 19
    repeticao                      shift and go to state 20
    call                           shift and go to state 21
    incrementacao                  shift and go to state 22

state 8

    (3) declaracoes -> declaracao .

    ID              reduce using rule 3 (declaracoes -> declaracao .)
    FUNCTION        reduce using rule 3 (declaracoes -> declaracao .)
    WRITE           reduce using rule 3 (declaracoes -> declaracao .)
    IF              reduce using rule 3 (declaracoes -> declaracao .)
    FOR             reduce using rule 3 (declaracoes -> declaracao .)
    WHILE           reduce using rule 3 (declaracoes -> declaracao .)


state 9

    (8) declaracao -> funcao .

    ID              reduce using rule 8 (declaracao -> funcao .)
    FUNCTION        reduce using rule 8 (declaracao -> funcao .)
    WRITE           reduce using rule 8 (declaracao -> funcao .)
    IF              reduce using rule 8 (declaracao -> funcao .)
    FOR             reduce using rule 8 (declaracao -> funcao .)
    WHILE           reduce using rule 8 (declaracao -> funcao .)
    NUMBER          reduce using rule 8 (declaracao -> funcao .)
    LBRACKET        reduce using rule 8 (declaracao -> funcao .)


state 10

    (48) funcao -> FUNCTION . ID LCBRACKET comandos RETURN expressao RCBRACKET SEMICOLON

    ID              shift and go to state 27


state 11

    (5) declaracao -> ID SEMICOLON .

    ID              reduce using rule 5 (declaracao -> ID SEMICOLON .)
    FUNCTION        reduce using rule 5 (declaracao -> ID SEMICOLON .)
    WRITE           reduce using rule 5 (declaracao -> ID SEMICOLON .)
    IF              reduce using rule 5 (declaracao -> ID SEMICOLON .)
    FOR             reduce using rule 5 (declaracao -> ID SEMICOLON .)
    WHILE           reduce using rule 5 (declaracao -> ID SEMICOLON .)
    NUMBER          reduce using rule 5 (declaracao -> ID SEMICOLON .)
    LBRACKET        reduce using rule 5 (declaracao -> ID SEMICOLON .)


state 12

    (6) declaracao -> ID ASSIGN . NUMBER SEMICOLON
    (7) declaracao -> ID ASSIGN . leitura
    (17) leitura -> . READ LBRACKET texto RBRACKET SEMICOLON

    NUMBER          shift and go to state 28
    READ            shift and go to state 30

    leitura                        shift and go to state 29

state 13

    (5) declaracao -> ID . SEMICOLON
    (6) declaracao -> ID . ASSIGN NUMBER SEMICOLON
    (7) declaracao -> ID . ASSIGN leitura
    (18) atribuicao -> ID . ASSIGN expressao SEMICOLON
    (19) atribuicao -> ID . ASSIGN leitura
    (49) call -> ID . LBRACKET RBRACKET SEMICOLON
    (36) incrementacao -> ID . INCREMENT
    (37) incrementacao -> ID . DECREMENT

    SEMICOLON       shift and go to state 11
    ASSIGN          shift and go to state 31
    LBRACKET        shift and go to state 32
    INCREMENT       shift and go to state 33
    DECREMENT       shift and go to state 34


state 14

    (2) plc -> PLC ID VAR declaracoes comandos .
    (10) comandos -> comandos . comando
    (11) comando -> . atribuicao
    (12) comando -> . escrita
    (13) comando -> . selecao
    (14) comando -> . repeticao
    (15) comando -> . call
    (16) comando -> . incrementacao SEMICOLON
    (18) atribuicao -> . ID ASSIGN expressao SEMICOLON
    (19) atribuicao -> . ID ASSIGN leitura
    (20) escrita -> . WRITE LBRACKET argumento RBRACKET SEMICOLON
    (32) selecao -> . IF LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET
    (33) selecao -> . IF LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET ELSE LCBRACKET comandos RCBRACKET
    (34) repeticao -> . FOR LBRACKET declaracao condicao SEMICOLON incrementacao RBRACKET LCBRACKET comandos RCBRACKET
    (35) repeticao -> . WHILE LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET
    (49) call -> . ID LBRACKET RBRACKET SEMICOLON
    (36) incrementacao -> . ID INCREMENT
    (37) incrementacao -> . ID DECREMENT

    $end            reduce using rule 2 (plc -> PLC ID VAR declaracoes comandos .)
    ID              shift and go to state 35
    WRITE           shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 26

    comando                        shift and go to state 36
    atribuicao                     shift and go to state 17
    escrita                        shift and go to state 18
    selecao                        shift and go to state 19
    repeticao                      shift and go to state 20
    call                           shift and go to state 21
    incrementacao                  shift and go to state 22

state 15

    (4) declaracoes -> declaracoes declaracao .

    ID              reduce using rule 4 (declaracoes -> declaracoes declaracao .)
    FUNCTION        reduce using rule 4 (declaracoes -> declaracoes declaracao .)
    WRITE           reduce using rule 4 (declaracoes -> declaracoes declaracao .)
    IF              reduce using rule 4 (declaracoes -> declaracoes declaracao .)
    FOR             reduce using rule 4 (declaracoes -> declaracoes declaracao .)
    WHILE           reduce using rule 4 (declaracoes -> declaracoes declaracao .)


state 16

    (9) comandos -> comando .

    ID              reduce using rule 9 (comandos -> comando .)
    WRITE           reduce using rule 9 (comandos -> comando .)
    IF              reduce using rule 9 (comandos -> comando .)
    FOR             reduce using rule 9 (comandos -> comando .)
    WHILE           reduce using rule 9 (comandos -> comando .)
    $end            reduce using rule 9 (comandos -> comando .)
    RETURN          reduce using rule 9 (comandos -> comando .)
    RCBRACKET       reduce using rule 9 (comandos -> comando .)


state 17

    (11) comando -> atribuicao .

    ID              reduce using rule 11 (comando -> atribuicao .)
    WRITE           reduce using rule 11 (comando -> atribuicao .)
    IF              reduce using rule 11 (comando -> atribuicao .)
    FOR             reduce using rule 11 (comando -> atribuicao .)
    WHILE           reduce using rule 11 (comando -> atribuicao .)
    $end            reduce using rule 11 (comando -> atribuicao .)
    RETURN          reduce using rule 11 (comando -> atribuicao .)
    RCBRACKET       reduce using rule 11 (comando -> atribuicao .)


state 18

    (12) comando -> escrita .

    ID              reduce using rule 12 (comando -> escrita .)
    WRITE           reduce using rule 12 (comando -> escrita .)
    IF              reduce using rule 12 (comando -> escrita .)
    FOR             reduce using rule 12 (comando -> escrita .)
    WHILE           reduce using rule 12 (comando -> escrita .)
    $end            reduce using rule 12 (comando -> escrita .)
    RETURN          reduce using rule 12 (comando -> escrita .)
    RCBRACKET       reduce using rule 12 (comando -> escrita .)


state 19

    (13) comando -> selecao .

    ID              reduce using rule 13 (comando -> selecao .)
    WRITE           reduce using rule 13 (comando -> selecao .)
    IF              reduce using rule 13 (comando -> selecao .)
    FOR             reduce using rule 13 (comando -> selecao .)
    WHILE           reduce using rule 13 (comando -> selecao .)
    $end            reduce using rule 13 (comando -> selecao .)
    RETURN          reduce using rule 13 (comando -> selecao .)
    RCBRACKET       reduce using rule 13 (comando -> selecao .)


state 20

    (14) comando -> repeticao .

    ID              reduce using rule 14 (comando -> repeticao .)
    WRITE           reduce using rule 14 (comando -> repeticao .)
    IF              reduce using rule 14 (comando -> repeticao .)
    FOR             reduce using rule 14 (comando -> repeticao .)
    WHILE           reduce using rule 14 (comando -> repeticao .)
    $end            reduce using rule 14 (comando -> repeticao .)
    RETURN          reduce using rule 14 (comando -> repeticao .)
    RCBRACKET       reduce using rule 14 (comando -> repeticao .)


state 21

    (15) comando -> call .

    ID              reduce using rule 15 (comando -> call .)
    WRITE           reduce using rule 15 (comando -> call .)
    IF              reduce using rule 15 (comando -> call .)
    FOR             reduce using rule 15 (comando -> call .)
    WHILE           reduce using rule 15 (comando -> call .)
    $end            reduce using rule 15 (comando -> call .)
    RETURN          reduce using rule 15 (comando -> call .)
    RCBRACKET       reduce using rule 15 (comando -> call .)


state 22

    (16) comando -> incrementacao . SEMICOLON

    SEMICOLON       shift and go to state 37


state 23

    (20) escrita -> WRITE . LBRACKET argumento RBRACKET SEMICOLON

    LBRACKET        shift and go to state 38


state 24

    (32) selecao -> IF . LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET
    (33) selecao -> IF . LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET ELSE LCBRACKET comandos RCBRACKET

    LBRACKET        shift and go to state 39


state 25

    (34) repeticao -> FOR . LBRACKET declaracao condicao SEMICOLON incrementacao RBRACKET LCBRACKET comandos RCBRACKET

    LBRACKET        shift and go to state 40


state 26

    (35) repeticao -> WHILE . LBRACKET condicao RBRACKET LCBRACKET comandos RCBRACKET

    LBRACKET        shift and go to state 41


state 27

    (48) funcao -> FUNCTION ID . LCBRACKET comandos RETURN expressao RCBRACKET SEMICOLON

    LCBRACKET       shift and go to state 42


state 28

    (6) declaracao -> ID ASSIGN NUMBER . SEMICOLON

    SEMICOLON       shift and go to state 43


state 29

    (7) declaracao -> ID ASSIGN leitura .

    ID              reduce using rule 7 (declaracao -> ID ASSIGN leitura .)
    FUNCTION        reduce using rule 7 (declaracao -> ID ASSIGN leitura .)
    WRITE           reduce using rule 7 (declaracao -> ID ASSIGN leitura .)
    IF              reduce using rule 7 (declaracao -> ID ASSIGN leitura .)
    FOR             reduce using rule 7 (declaracao -> ID ASSIGN leitura .)
    WHILE           reduce using rule 7 (declaracao -> ID ASSIGN leitura .)
    NUMBER          reduce using rule 7 (declaracao -> ID ASSIGN leitura .)
    LBRACKET        reduce using rule 7 (declaracao -> ID ASSIGN leitura .)


state 30

    (17) leitura -> READ . LBRACKET texto RBRACKET SEMICOLON

    LBRACKET        shift and go to state 44


state 31

    (6) declaracao -> ID ASSIGN . NUMBER SEMICOLON
    (7) declaracao -> ID ASSIGN . leitura
    (18) atribuicao -> ID ASSIGN . expressao SEMICOLON
    (19) atribuicao -> ID ASSIGN . leitura
    (17) leitura -> . READ LBRACKET texto RBRACKET SEMICOLON
    (24) expressao -> . fator
    (25) expressao -> . expressao PLUS expressao
    (26) expressao -> . expressao MINUS expressao
    (27) expressao -> . expressao TIMES expressao
    (28) expressao -> . expressao DIVIDE expressao
    (29) fator -> . ID
    (30) fator -> . NUMBER
    (31) fator -> . LBRACKET expressao RBRACKET

    NUMBER          shift and go to state 46
    READ            shift and go to state 30
    ID              shift and go to state 45
    LBRACKET        shift and go to state 49

    leitura                        shift and go to state 47
    expressao                      shift and go to state 48
    fator                          shift and go to state 50

state 32

    (49) call -> ID LBRACKET . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 51


state 33

    (36) incrementacao -> ID INCREMENT .

    SEMICOLON       reduce using rule 36 (incrementacao -> ID INCREMENT .)
    RBRACKET        reduce using rule 36 (incrementacao -> ID INCREMENT .)


state 34

    (37) incrementacao -> ID DECREMENT .

    SEMICOLON       reduce using rule 37 (incrementacao -> ID DECREMENT .)
    RBRACKET        reduce using rule 37 (incrementacao -> ID DECREMENT .)


state 35

    (18) atribuicao -> ID . ASSIGN expressao SEMICOLON
    (19) atribuicao -> ID . ASSIGN leitura
    (49) call -> ID . LBRACKET RBRACKET SEMICOLON
    (36) incrementacao -> ID . INCREMENT
    (37) incrementacao -> ID . DECREMENT

    ASSIGN          shift and go to state 52
    LBRACKET        shift and go to state 32
    INCREMENT       shift and go to state 33
    DECREMENT       shift and go to state 34


state 36

    (10) comandos -> comandos comando .

    ID              reduce using rule 10 (comandos -> comandos comando .)
    WRITE           reduce using rule 10 (comandos -> comandos comando .)
    IF              reduce using rule 10 (comandos -> comandos comando .)
    FOR             reduce using rule 10 (comandos -> comandos comando .)
    WHILE           reduce using rule 10 (comandos -> comandos comando .)
    $end            reduce using rule 10 (comandos -> comandos comando .)
    RETURN          reduce using rule 10 (comandos -> comandos comando .)
    RCBRACKET       reduce using rule 10 (comandos -> comandos comando .)


state 37

    (16) comando -> incrementacao SEMICOLON .

    ID              reduce using rule 16 (comando -> incrementacao SEMICOLON .)
    WRITE           reduce using rule 16 (comando -> incrementacao SEMICOLON .)
    IF              reduce using rule 16 (comando -> incrementacao SEMICOLON .)
    FOR             reduce using rule 16 (comando -> incrementacao SEMICOLON .)
    WHILE           reduce using rule 16 (comando -> incrementacao SEMICOLON .)
    $end            reduce using rule 16 (comando -> incrementacao SEMICOLON .)
    RETURN          reduce using rule 16 (comando -> incrementacao SEMICOLON .)
    RCBRACKET       reduce using rule 16 (comando -> incrementacao SEMICOLON .)


state 38

    (20) escrita -> WRITE LBRACKET . argumento RBRACKET SEMICOLON
    (21) argumento -> . texto
    (22) argumento -> . expressao
    (23) texto -> . QUOTE STRING QUOTE
    (24) expressao -> . fator
    (25) expressao -> . expressao PLUS expressao
    (26) expressao -> . expressao MINUS expressao
    (27) expressao -> . expressao TIMES expressao
    (28) expressao -> . expressao DIVIDE expressao
    (29) fator -> . ID
    (30) fator -> . NUMBER
    (31) fator -> . LBRACKET expressao RBRACKET

    QUOTE           shift and go to state 56
    ID              shift and go to state 45
    NUMBER          shift and go to state 57
    LBRACKET        shift and go to state 49

    argumento                      shift and go to state 53
    texto                          shift and go to state 54
    expressao                      shift and go to state 55
    fator                          shift and go to state 50

state 39

    (32) selecao -> IF LBRACKET . condicao RBRACKET LCBRACKET comandos RCBRACKET
    (33) selecao -> IF LBRACKET . condicao RBRACKET LCBRACKET comandos RCBRACKET ELSE LCBRACKET comandos RCBRACKET
    (38) condicao -> . condicao operador condicao
    (39) condicao -> . expressao
    (24) expressao -> . fator
    (25) expressao -> . expressao PLUS expressao
    (26) expressao -> . expressao MINUS expressao
    (27) expressao -> . expressao TIMES expressao
    (28) expressao -> . expressao DIVIDE expressao
    (29) fator -> . ID
    (30) fator -> . NUMBER
    (31) fator -> . LBRACKET expressao RBRACKET

    ID              shift and go to state 45
    NUMBER          shift and go to state 57
    LBRACKET        shift and go to state 49

    condicao                       shift and go to state 58
    expressao                      shift and go to state 59
    fator                          shift and go to state 50

state 40
